--- a/index.html
+++ b/index.html
@@ -72,7 +72,17 @@
     <header>
         <div class="theme-title">
             <p class="title">Oleh - Oleh Fungprok A</p>
-            <p class="title">Tugas 1 dan Tugas 2</p>
+            <p class="title">Tugas 3 dan Tugas 4</p>
         </div>
     </header>
+    <main class="d-flex justify-content-center">
+        <div class="col-md-6 mt-3 mx-auto">
+            <div class="assign-title mt-3">
+                <p class="assign-chapter text-center">Tugas 1 Pahami Permasalahan Berikut (Python)</p>
+                <div class="img-container mt-3 mb-3 d-flex justify-content-center">
+                    <img src="./Picture1.jpg" alt="" srcset="" width="25%">
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
