--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
     <main class="d-flex justify-content-center">
         <div class="col-md-6 mt-3 mx-auto">
             <div class="assign-title mt-3">
-                <p class="assign-chapter text-center">Tugas 1 Pahami Permasalahan Berikut (Python)</p>
+                <p class="assign-chapter text-center">Belom Ada Apa - Apa Cuy!</p>
                 <div class="img-container mt-3 mb-3 d-flex justify-content-center">
-                    <img src="./Picture1.jpg" alt="" srcset="" width="25%">
+                    <img src="./Picture8.jpeg" alt="" srcset="" width="25%">
                 </div>
             </div>
         </div>
